--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Font2Profile</title>
 
+	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="main.css">
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuidv4.min.js"></script>
@@ -16,11 +17,12 @@
 
 <body>
 	<div class="container">
+		<h1>フォントインストーラー</h1>
 		<p>フォントを構成プロファイルに変換するよ。<br>フォントが大きいとインストールできないことがあるよ。</p>
 		<form action="#" id="form" onsubmit="convert(event);">
-			<label for="input" class="input_button">フォントを選ぶ (.ttf or .otf)</label>
+			<label for="input" class="input_button input">フォントを選ぶ (.ttf or .otf)</label>
 			<input id="input" name="font" type="file" accept=".ttf,.otf" style="display: none;" multiple>
-			<input class="input_button" type="submit" value="Convert" style="height: 50px;">
+			<input class="input_button" type="submit" value="変換">
 		</form>
 	</div>
 </body>
