--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="container">
 		<h1>フォントインストーラー</h1>
 		<p>フォントを構成プロファイルに変換するよ。<br>フォントが大きいとインストールできないことがあるよ。</p>
-		<div>
+		<div id="form">
 			<label for="input" class="input_button input">フォントを選ぶ (.ttf or .otf)</label>
 			<input id="input" name="font" type="file" accept=".ttf,.otf" style="display: none;" multiple>
 			<button class="input_button" onclick="onClick()">変換</button>
