--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div class="container">
-		<h1>フォントインストーラー</h1>
+		<h1>フォントコンバーター</h1>
 		<p>フォントを構成プロファイルに変換するよ。<br>フォントが大きいとインストールできないことがあるよ。</p>
 		<div id="form">
 			<label for="input" class="input_button input">フォントを選ぶ (.ttf or .otf)</label>
